--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
 language: go
 go:
   - 1.9
+
+sudo: required
+services:
+  - docker
+
+script:
+  - make
+  - make docker-build
+  - make docker-push
