--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,11 @@ sudo: required
 services:
   - docker
 
-# https://docs.travis-ci.com/user/docker/#Installing-a-newer-Docker-version
+# Docker 17.05 is required for multi-stage build so,
+# for now, we hace to install a newer version manually
+# See: https://docs.travis-ci.com/user/docker/#Installing-a-newer-Docker-version
 before_install:
+  - docker -v
   - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
   - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
   - sudo apt-get update
@@ -18,5 +21,4 @@ before_install:
 
 script:
   - make
-  - make docker-build
   - make docker-push
